<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <!-- Nested Views Go Here -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheatText"
        android:textSize="50sp"
        android:gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:id="@+id/cheat_show_ans"
        android:text="@string/showAnsButton"
        android:textSize="24sp"
        android:layout_marginTop="100dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:padding="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheat_text"
        android:layout_marginTop="100dp"
        android:text="@string/cheatAns"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="invisible"
        />

</LinearLayout>