<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <!-- Nested Views Go Here -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_text_view"
            tools:text="#"
            android:textSize="24sp"

            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:gravity="center"
        android:id="@+id/question_text_view"
        tools:text="Question text here"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/true_button"
            android:text="@string/boolTrue"
            android:textSize="24sp"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_marginRight="25dp"
            android:padding="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/false_button"
            android:text="@string/boolFalse"
            android:textSize="24sp"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:padding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/prev_button"
            android:text="@string/prev"
            android:textSize="24sp"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_marginEnd="25dp"
            android:padding="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/next_button"
            android:text="@string/next"
            android:textSize="24sp"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:padding="10dp"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/cheat_button"
        android:text="Cheat!"
        android:textSize="24sp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:padding="10dp"
        />


</LinearLayout>